/*
 * Copyright 2022 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package mobileharness.client;

option java_package = "com.google.devtools.mobileharness.api.proto";
option java_outer_classname = "Device";

// Proto used to specify device spec in JobConfig.
message DeviceSpec {
  // Required. Device type, for example, AndroidRealDevice.
  string type = 1;
  string model = 2;
  string version = 3;
  map<string, string> dimensions = 4;
}
